b=521198 don't update when refresh is disabled r=roc